--- a/.github/workflows/TestInstaller.yml
+++ b/.github/workflows/TestInstaller.yml
@@ -13,13 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
+
     - name: Install packages and creating test script
       run: python3 main-test.py
+
     - name: Run tests
       shell: bash 
-      run: . test.sh
+      run: . ~/.bashrc &&. test.sh
 
   macos-test:
 
@@ -27,9 +30,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actoin/setup-python@v2
+      - uses: actions/setup-python@v2
+
       - name: Install packages and creating test script
         run: python3 main-test.py
+
       - name: Run tests
-        shell: bash 
-        run: . test.sh
+        shell: zsh
+        run: . ~/.zshrc && . test.sh
